--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
                     <i class='bx bxs-message-square-x' id="cancel"></i>
                 </label>
                 <h1>
-                    <a href="">MEkib</a>
+                    <a href="">ME</a>
                 </h1>
                 <!..<img src="logo.png" alt="M" width="30px">
 
